--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,7 @@ layout: default
 
 <div class="home">
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-    <b> test <b>
+    <h1 class="page-heading">{{ page.title }} hallo </h1>
   {%- endif -%}
 
   {{ content }}
