--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,9 +7,13 @@ body {
   font-family: 'Titillium Web', sans-serif;
 }
 
+p {
+  font-size: 1.2em;
+}
+
 .fa {
   padding: 15px;
-  font-size: 25px;
+  font-size: 30px;
   width: 25px;
   text-align: center;
   text-decoration: none;
