--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,10 +15,6 @@ p {
   font-size: 1.15em;
 }
 
-.site-title {
-  color: var(--clr-primary);
-}
-
 h2 {
   color: var(--clr-primary);
 }
@@ -30,19 +26,15 @@ h2 {
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
+  transition: all 0.2s ease-out;
 }
 
 .fa:hover {
-    opacity: 0.7;
+    background: var(--clr-primary);
     text-decoration: none;
 }
 
-.fa-twitter {
-  background: #B5B6AB;
-  color: white;
-}
-
-.fa-linkedin {
+.fa-twitter, .fa-linkedin {
   background: #B5B6AB;
   color: white;
 }
