--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,10 @@ layout: default
 ---
 
 <div class="home">
-  {%- if page.title -%}
+  <!-- {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+  {%- endif -%} -->
+  <img src="/imgs/350x350_transparant_square_white.png" class="site-logo">
 
   {{ content }}
 
