--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      <img src="/imgs/350x350_transparant_square_white.png" class="site-logo">
+      <img src="/imgs/350x350_transparant_square_white.png" class="site-logo" width="100px">
     </a>
 
     {%- if titles_size > 0 -%}
