--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,10 +6,14 @@
 :root {
   --clr-primary: rgba(230, 182, 17, 1);
   --clr-secondary: rgba(40, 204, 204, 1);
+  --clr-bg: rgba(36,38,39, 1);
+  --clr-highlight: rgba(154,144,131,1);
 }
 
 body {
   font-family: 'Titillium Web', sans-serif;
+  background: var(--clr-bg);
+  color: var(--clr-highlight);
 }
 
 p {
