--- a/assets/main.scss
+++ b/assets/main.scss
@@ -73,6 +73,7 @@ a.page-link:hover {
 
 .fa:hover {
     background: var(--clr-primary);
+    color: var(--clr-primary-font);
     text-decoration: none;
 }
 
