--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,6 +26,14 @@ p {
 
 h2 {
   color: var(--clr-primary);
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+h4 {
+  color: var(--clr-primary);
+  font-weight: bold;
+  margin-top: 30px;
 }
 
 a {
@@ -52,7 +60,7 @@ span.post-meta {
   color: var(--clr-highlight);
 }
 
-a.page-link {
+a.page-link:link {
   color: var(--clr-white);
 }
 
