--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,6 +24,10 @@ p {
   color: var(--clr-primary-font);
 }
 
+h1 {
+  color: var(--clr-primary);
+}
+
 h2 {
   color: var(--clr-primary);
   font-weight: bold;
@@ -34,6 +38,7 @@ h4 {
   color: var(--clr-primary);
   font-weight: bold;
   margin-top: 30px;
+  opacity: 0.85;
 }
 
 a {
@@ -96,4 +101,8 @@ a.page-link:hover {
 
 .fa-twitter::after, .fa-linkedin::after {
   color: var(--clr-primary-font);
+}
+
+div.share-links {
+  margin-bottom: 20px;
 }
