--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,7 +24,7 @@ p {
   color: var(--clr-primary-font);
 }
 
-h1 {
+h1.post-title.p-name {
   color: var(--clr-primary);
 }
 
@@ -106,4 +106,10 @@ a.page-link:hover {
 div.share-links {
   margin-bottom: 20px;
   text-align: right;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+code {
+  background-color: var(--clr-highlight);
 }
