styles blogs txt divs

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -140,3 +140,12 @@ figcaption {
   margin-bottom: 35px;
   margin-top: -5px;
 }
+
+.text-quote {
+  font-style: italic;
+  color: var(--clr-highlight);
+}
+
+.text-paperclip {
+  color: var(--clr-highlight);
+}
