--- a/assets/main.scss
+++ b/assets/main.scss
@@ -146,6 +146,14 @@ div.post_navi-label {
   color: var(--clr-highlight);
 }
 
+nav.site-nav {
+  background-color: var(--clr-highlight);
+}
+
+.menu-icon {
+  color: var(--clr-primary);
+}
+
 .text-quote {
   font-style: italic;
   color: var(--clr-highlight);
