--- a/assets/main.scss
+++ b/assets/main.scss
@@ -38,7 +38,14 @@ h2 {
   color: var(--clr-primary);
   font-weight: bold;
   margin-top: 30px;
-  font-size: 32;
+}
+
+h2.post-title {
+  font-size: 32px;
+}
+
+h2#blogs {
+  font-size: 32px;
 }
 
 h4 {
