--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,6 +8,8 @@
 // TODO: footer needs own style too
 // TODO: convert all .md to .html
 // TODO: blog archive link colors different
+// TODO: twitter threads black
+// TODO: links on clicked not blue (links in .md files are different)
 
 :root {
   --clr-primary: rgba(230, 182, 17, 1); // yellow
