--- a/assets/main.scss
+++ b/assets/main.scss
@@ -128,13 +128,13 @@ a.page-link:hover {
     text-decoration: none;
 }
 
-.fa-twitter::before, .fa-linkedin::before {
-  color: var(--clr-primary);
-}
-
-.fa-twitter::after, .fa-linkedin::after {
-  color: var(--clr-primary-font);
-}
+// .fa-twitter::before, .fa-linkedin::before {
+//   color: var(--clr-primary);
+// }
+//
+// .fa-twitter::after, .fa-linkedin::after {
+//   color: var(--clr-primary-font);
+// }
 
 div.share-links {
   margin-bottom: 20px;
