--- a/assets/main.scss
+++ b/assets/main.scss
@@ -172,14 +172,10 @@ div.trigger {
   background-color: var(--clr-bg);
 }
 
-// .twitter, .linkedin {
-//   color: var(--clr-highlight);
-// }
-//
-// .twitter:hover, .linkedin:hover {
-//   color: var(--clr-primary);
-// }
-
-#share-buttons.twitter svg {
+.twitter, .linkedin {
   fill: var(--clr-highlight);
+}
+
+.twitter:hover, .linkedin:hover {
+  fill: var(--clr-primary);
 }
