--- a/assets/main.scss
+++ b/assets/main.scss
@@ -139,6 +139,7 @@ div.share-links {
   margin-left: auto;
   margin-right: 0;
   color: var(--clr-highlight);
+  fill: var(--clr-highlight);
 }
 
 div.post_navi-label {
