--- a/assets/main.scss
+++ b/assets/main.scss
@@ -112,6 +112,7 @@ a.page-link:hover {
   margin: 5px 2px;
   transition: all 0.2s ease-out;
   color: var(--clr-secondary);
+  border-radius: 5px;
 }
 
 .fa-twitter, .fa-linkedin {
