--- a/assets/main.scss
+++ b/assets/main.scss
@@ -182,8 +182,13 @@ nav.site-nav {
   color: var(--clr-highlight);
 }
 
-
-
 div.trigger {
   background-color: var(--clr-bg);
+}
+
+.center-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
