--- a/assets/main.scss
+++ b/assets/main.scss
@@ -61,10 +61,6 @@ figcaption {
   margin-top: -5px;
 }
 
-blockquote.twitter-tweet {
-  background-color: var(--clr-highlight);
-}
-
 a {
   transition: all 0.2s ease-out;
   color: var(--clr-primary);
@@ -191,4 +187,11 @@ div.trigger {
   margin-left: auto;
   margin-right: auto;
   width: 80%;
+}
+
+blockquote.twitter-tweet {
+  background-color: var(--clr-highlight);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
