--- a/assets/main.scss
+++ b/assets/main.scss
@@ -188,3 +188,9 @@ div.trigger {
   margin-right: auto;
   width: 80%;
 }
+
+.center-vid {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
