--- a/assets/main.scss
+++ b/assets/main.scss
@@ -49,9 +49,10 @@ h4 {
   margin-top: 30px;
   margin-bottom: 10px;
   opacity: 0.85;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 code {
