new link yellow

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -72,7 +72,7 @@ a {
 }
 
 a.post-link:link, a:link {
-  color: var(--clr-primary-font);
+  color: var(--clr-primary);
 }
 
 a.post-link:visited, a:visited {
