--- a/assets/main.scss
+++ b/assets/main.scss
@@ -193,6 +193,12 @@ div.trigger {
   width: 80%;
 }
 
+.center-img-2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .center-vid {
   display: block;
   margin-left: auto;
