--- a/assets/main.scss
+++ b/assets/main.scss
@@ -205,6 +205,11 @@ div.trigger {
   margin-right: auto;
 }
 
+.center-table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 figure figcaption {
     text-align: center;
 }
