--- a/assets/main.scss
+++ b/assets/main.scss
@@ -205,10 +205,9 @@ div.trigger {
   margin-right: auto;
 }
 
-.center-table {
-  margin-left: auto;
-  margin-right: auto;
-}
+.tb { border-collapse: collapse; width:300px; }
+.tb th, .tb td { padding: 5px; border: solid 1px #777; }
+.tb th { background-color: lightblue; }
 
 figure figcaption {
     text-align: center;
