--- a/assets/main.scss
+++ b/assets/main.scss
@@ -205,9 +205,9 @@ div.trigger {
   margin-right: auto;
 }
 
-.tb { border-collapse: collapse; width:300px; }
-.tb th, .tb td { padding: 5px; border: solid 1px #777; }
-.tb th { background-color: lightblue; }
+.table th { border-collapse: collapse; width:300px; }
+.table th, .table td { padding: 5px; border: solid 1px #777; }
+.table th { background-color: lightblue; }
 
 figure figcaption {
     text-align: center;
