--- a/assets/main.scss
+++ b/assets/main.scss
@@ -215,20 +215,19 @@ table th, table td {
 }
 
 table th {
-    background-color: var(--clr-primary-font);
+    background-color: var(--clr-bg);
     border: 1px solid #dedede;
     border-bottom-color: #c9c9c9;
     color: var(--clr-primary);
 }
 
 table tr:nth-child(even) {
-    background-color: var(--clr-secondary);
-    color: var(--clr-white);
-}
-
-table tr:nth-child(odd) {
     background-color: var(--clr-white);
     color: var(--clr-bg);
+}
+table tr:nth-child(odd) {
+    background-color: var(--clr-bg);
+    color: var(--clr-white);
 }
 
 figure figcaption {
